# superbeelive

cam_client/: .gitignore  Makefile  test.sh
cam_client/src/: main.c
dockers/cam_daemon_C1M1/: Dockerfile
docs/: BP_Cameras.ods
libsbl/include/: sbl.h  sblv_file.h  sblv_file.h~
sbl_cam_client/: Makefile
sbl_cam_client/src/: main.c
sbl_cam_daemon/: .gitignore  Makefile
sbl_cam_daemon/src/: control_lost_cb.c  data.h  main.c  new_buffer_cb.c  periodic_task_cb.c  signal_handler.c  stream_cb.c
sbl_tools/sbl_cam_grab_frame/: Makefile  main.c
sbl_tools/sbl_cam_list/: Makefile  pad.c
sbl_tools/sbl_cam_list/src/: main.c
sbl_video_compress/: test.sh
sblv_tools/: CMakeLists.txt
sblv_tools/src/: sblv_export.c  sblv_extract_one_frame.c  sblv_print.c  scandir.c
scripts/: start_acqui.sh  start_web_srv.sh
web_server/: cron_script.sh
web_server/config_nginx/: images_ruche.conf
web_server/cron_server/: script.sh
web_server/html/: index.html
web_server/html/video_extraction/: package-lock.json  package.json  server.js
web_server/html/video_extraction/public/: client.js  index.html
web_server/web_server/: webserver.py
